using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class UIFadeBackground : UIBase
{

}
